# IR_graphes

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MANIFEST.in  README.md  README.rst  install.vbs  main.cpp  nuitka_install.txt  setup.cfg
docs/: Paramètres.md  Roadmap.md  add_error_check.md  data flow.md  development help.md  elements.md  process_description.md
scripts/: INSTALLER.vbs  babel.bat  create_env.bat  installateur.vbs  test.vbs
src/emsapp/: __init__.py  __main__.py  config.py  const.py  data.py  emsapp.py  errors.py  i18n.py  logging.py  playground.py  plugin.py  startup.py  utils.py  validators.py
src/emsapp/data/: __init__.py  filters.py  groupers.py  loading.py  process.py  splitters.py  transformers.py  validators.py
src/emsapp/data/loaders/: access_loader.py  excel_loader.py
src/emsapp/data_flow/: importation.py
src/emsapp/data_flow/importers/: access_importer.py  excel_importer.py
src/emsapp/defaults/: config.toml  user_data.json
src/emsapp/importers/: access_importer.py  excel_importer.py
src/emsapp/locale/de/LC_MESSAGES/: messages.po
src/emsapp/locale/fr/LC_MESSAGES/: messages.po
src/emsapp/package_data/: current_config.json  default_config.toml  default_process.toml  default_style.mplstyle  user_data.json
src/emsapp/plotting/: plotter.py
src/emsapp/widgets/: common.py  config_form.py  exception_hook.py  importation.py  info_box.py  main_window.py  preview.py
testing/: app_test.py  plot_test.py  test_data.py
testing/testing_data/: LocalEMIR.accdb
