[metadata]
name = emsapp
version = 0.7
description = App used to create plots of the current Covid situation in Canton Fribourg
author = Benoît Sierro
long_description = file: README.md
license = LGPLv3 License
classifiers =
    Framework :: PyQt5
    License :: OSI Approved :: LGPLv3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Intended Audience :: Internal

[options]
zip_safe = False
include_package_data = True
package_dir = 
    = src
packages = find:
install_requires =
    matplotlib
    numpy
    openpyxl
    pydantic
    pyodbc
    PyQt5
    tomli


# [options.entry_points]
# console_scripts =
#     executable-name = package.module:function

[options.packages.find]
where = src